@@ -2,7 +2,7 @@
 # found in Tcllib in one shared library.
 
 package require critcl
-package provide tcllibc 0.3.9
+package provide tcllibc 0.3.10
 
 namespace eval ::tcllib {
     variable tcllibc_rcsid {$Id: tcllibc.tcl,v 1.13 2010/05/25 19:26:17 andreas_kupries Exp $}
